	PR java/17329: 	* java-gimplify.c (java_gimplify_expr) <SAVE_EXPR>: Ignore case 	where operand is null.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@87961 138bc75d-0d04-0410-961f-82ee72b054a4